plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.fedorizvekov'
version = '1.0.0-SNAPSHOT'
description = 'Reflection experiment'

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

jar {
    manifest {
        attributes 'Main-Class': 'com.fedorizvekov.dynamic.enum.DynamicEnumApplication'
    }
}

compileJava {
    options.compilerArgs << "--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED"
}

test {
    doFirst {
        systemProperty "jdk.reflect.useDirectMethodHandle", "false"
        jvmArgs += ["--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED"]
        jvmArgs += ["--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"]
        jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
    }
    useJUnitPlatform()
}
